# openapi.json
@@ -311,7 +311,8 @@
             "schema": {
               "enum": [
                 "direct",
-                "split"
+                "split",
+                "context"
               ],
               "type": "string",
               "default": "direct",
@@ -352,7 +353,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/AuditInput"
+                "$ref": "#/components/schemas/AuditRequest"
               }
             }
           },
@@ -383,7 +384,7 @@
   },
   "components": {
     "schemas": {
-      "AuditInput": {
+      "AuditRequest": {
         "properties": {
           "answer": {
             "type": "string",
@@ -396,7 +397,7 @@
               "$ref": "#/components/schemas/AuditSource"
             },
             "type": "array",
-            "maxItems": 4,
+            "maxItems": 40,
             "minItems": 1,
             "title": "Sources"
           },
@@ -404,7 +405,8 @@
             "type": "string",
             "enum": [
               "direct",
-              "split"
+              "split",
+              "context"
             ],
             "title": "Strategy",
             "default": "direct"
@@ -416,7 +418,7 @@
           "answer",
           "sources"
         ],
-        "title": "AuditInput"
+        "title": "AuditRequest"
       },
       "AuditSource": {
         "properties": {
